--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import Nav from "../components/Nav.astro"
+import Footer from '../components/Footer.astro'
+import "../styles/global.css"
+const { frontmatter } = Astro.props
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,7 +15,9 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Nav></Nav>
 		<slot />
+		<Footer></Footer>
 	</body>
 </html>
 
