--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,21 @@
 ---
+import Navigation from '../components/Nav.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+const pageTitle = '首页';
 ---
 
-<html lang="zh-cn">
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type ="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content = {Astro.generator} >
-    <title>Astro</title>
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>我的Astro站点</h1>
+    <Navigation />
+    <h1>{pageTitle}</h1>
+    <Footer />
   </body>
 </html>
